Appointment Done, designs added, admin login changed, background added

--- a/NewFirstevaluation/Frontend_Angular/src/app/app.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/app.component.css
@@ -1,7 +1,7 @@
-.navbar {
+/* .navbar {
     background: linear-gradient(to right, #6a1b9a, #00b4d9);
     color: white;
-}
+} */
 
 .navbar-brand, .nav-link {
     color: white;
