--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.html
@@ -1,9 +1,13 @@
+
+
+
+
 <section class="vh-100"
-style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;">
+style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); ">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px);">
+        <div class="card"style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 80%; ">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
@@ -34,7 +38,7 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                   <div data-mdb-input-init class="form-outline mb-4">
                     <label for="email" class="col-sm-3 col-form-label">Email:</label>
                     <div class="col-sm-9" id="inputfield">
-                        <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
+                        <input type="email" class="form-control form-select-lg input-outline" id="email" formControlName="email" placeholder="Email">
                         <div *ngIf="isInvalid('email')" class="text-danger">
                             {{ getErrorMessage('email') }}
                         </div>
@@ -44,7 +48,7 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                   <div data-mdb-input-init class="form-outline mb-4">
                     <label for="password" class="col-sm-3 col-form-label" >Password:</label>
                     <div class="col-sm-9" id="inputfield">
-                        <input type="password" class="form-control form-select-lg" id="password" formControlName="password" placeholder="password">
+                        <input type="password" class="form-control form-select-lg input-outline" id="password" formControlName="password" placeholder="password">
                         <div *ngIf="isInvalid('password')" class="text-danger">
                             {{ getErrorMessage('password') }}
                         </div>
