--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.css
@@ -9,6 +9,11 @@
     color: white;
 }
 
+.input-outline{
+  border: 1px solid #050e17; /* Change the color as needed */
+  border-radius: 0.25rem;
+}
+
 .navbar-brand, .nav-link {
     color: white;
 }
