--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub </a>
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -13,10 +13,10 @@
       <!-- Navigation items -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
-          
 
-         
-         
+
+
+
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
@@ -57,20 +57,20 @@
 
 
 
-<section class="emp-div">
+<section class="emp-div" style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); ">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
-        <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
+        <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
           <div class="card-body p-4 p-lg-5 text-black">
-            <h2 class="h1 fw-bold mb-0">Employer Details</h2>
+            <h2 class="h1 fw-bold mb-0" style="color: rgb(5, 15, 60);">Employer Details</h2>
             <form [formGroup]="empRegisterForm" (ngSubmit)="onSubmit()" novalidate>
               <!-- ROLE IN COMPANY -->
               <!-- Drop-down can also be added  -->
               <div class="form-outline mb-2">
                 <label for="roleInCompany" class="col-sm- col-form-label fw-bolder">Role:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg" id="roleInCompany" formControlName="roleInCompany" placeholder="Enter Your Role In Your Company">
+                                    <input type="text" class="form-control form-select-lg input-outline" id="roleInCompany" formControlName="roleInCompany" placeholder="Enter Your Role In Your Company">
                                     <div *ngIf="isInvalid('roleInCompany')" class="text-danger">
                                         {{ getErrorMessage('roleInCompany') }}
                                     </div>
@@ -82,7 +82,7 @@
                <div class="form-outline mb-2">
                 <label for="companyName" class="col-sm- col-form-label fw-bolder">Company Name:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg " id="companyName" formControlName="companyName" placeholder="Enter Company Name">
+                                    <input type="text" class="form-control form-select-lg input-outline" id="companyName" formControlName="companyName" placeholder="Enter Company Name">
                                     <div *ngIf="isInvalid('companyName')" class="text-danger">
                                         {{ getErrorMessage('companyName') }}
                                     </div>
@@ -94,7 +94,7 @@
               <div class="form-outline mb-2">
                 <label for="companyType" class="col-sm- col-form-label fw-bolder" >Company Type:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg" id="companyType" formControlName="companyType" placeholder="Enter Company Type">
+                                    <input type="text" class="form-control form-select-lg input-outline" id="companyType" formControlName="companyType" placeholder="Enter Company Type">
                                     <div *ngIf="isInvalid('companyType')" class="text-danger">
                                         {{ getErrorMessage('companyType') }}
                                     </div>
@@ -105,7 +105,7 @@
               <div class="form-outline mb-2">
                 <label for="companyDescription" class="col-sm- col-form-label fw-bolder">Company Description:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                  <textarea rows="3" cols="33" class="form-control form-select-lg " id="companyDescription" formControlName="companyDescription" placeholder="Enter Company Description"></textarea>
+                                  <textarea rows="3" cols="33" class="form-control form-select-lg input-outline" id="companyDescription" formControlName="companyDescription" placeholder="Enter Company Description"></textarea>
                                     <!-- <input type="textarea" class="form-control form-select-lg" id="phone" formControlName="phone" placeholder="Phone Number"> -->
                                     <div *ngIf="isInvalid('companyDescription')" class="text-danger">
                                         {{ getErrorMessage('companyDescription') }}
@@ -117,7 +117,7 @@
               <div class="form-outline mb-2">
                 <label for="companyAddress" class="col-sm- col-form-label fw-bolder" >Company Address:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg" id="companyAddress" formControlName="companyAddress" placeholder="Enter Company Address">
+                                    <input type="text" class="form-control form-select-lg input-outline" id="companyAddress" formControlName="companyAddress" placeholder="Enter Company Address">
                                     <div *ngIf="isInvalid('companyAddress')" class="text-danger">
                                         {{ getErrorMessage('companyAddress') }}
                                     </div>
@@ -129,7 +129,7 @@
               <div class="form-outline mb-2">
                 <label for="companySize" class="col-sm-3 col-form-label fw-bolder">Company Size:</label>
                 <div class="col-sm-9" id="inputfield">
-                  <input type="number" class="form-control form-select-lg" id="companySize" formControlName="companySize" placeholder="Enter Company Size">
+                  <input type="number" class="form-control form-select-lg input-outline" id="companySize" formControlName="companySize" placeholder="Enter Company Size">
                   <div *ngIf="isInvalid('companySize')" class="text-danger">
                     {{ getErrorMessage('companySize') }}
                 </div>
