--- a/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -19,8 +19,8 @@
             <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
           </li>
 
-         
-         
+
+
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
@@ -61,18 +61,18 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      
+
     </div>
   </nav>
 </div>
 
-<section class="stud-div"  >
+<section class="stud-div"  style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; width: 100%; backdrop-filter : blur(10px); ">
     <div class="container login-container py-3">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-md-9">
             <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 80%; margin: auto;">
                 <div class="card-body p-4 p-lg-5 text-black">
-              <h5 class="card-title text-center mb-4">Reset Password</h5>
+              <h3 class="card-title text-center mb-4" >Reset Password</h3>
               <form [formGroup]="forgotpasswordform" (ngSubmit)="onSubmit()" novalidate>
 
 
@@ -115,7 +115,7 @@
                   <a routerLink="/login">Remember Password?</a>
                 </div>
                 </div>
-                
+
               </form>
               <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
             </div>
