--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
       <div class="container-fluid">
         <!-- Centered brand -->
-        <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+        <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
 
         <!-- Toggler button for small screens -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
