--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.css
@@ -6,6 +6,11 @@ height: 1px;
 background: #eee;
 }
 
+.input-outline{
+  border: 1px solid #050e17; /* Change the color as needed */
+  border-radius: 0.25rem;
+}
+
 #drop{
     width: 100px;
 }
@@ -17,4 +22,22 @@ background: #eee;
 
 .log-div{
   background-color: rgb(146, 171, 198);
+}
+
+.navbar {
+  background: linear-gradient(to right, #6a1b9a, #00b4d9);
+  color: white;
+}
+
+.navbar-brand, .nav-link {
+  color: white;
+}
+
+.navbar-brand:hover, .nav-link:hover {
+  color: #ddd;
+}
+
+.nav-link.active {
+  color: #ffffff; /* Bright white color */
+  font-weight: bold; /* Bold text */
 }
