--- a/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.css
@@ -2,23 +2,23 @@
     width: 100%;
 }
 .stud-div{
+  margin-top: 5px;
     background-color: rgb(146, 171, 198);
   }
   .navbar {
     background: linear-gradient(to right, #6a1b9a, #00b4d9);
     color: white;
   }
-  
+
   .navbar-brand, .nav-link {
     color: white;
   }
-  
+
   .navbar-brand:hover, .nav-link:hover {
     color: #ddd;
   }
-  
+
   .nav-link.active {
     color: #ffffff; /* Bright white color */
     font-weight: bold; /* Bold text */
   }
-  
