--- a/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.css
@@ -1,6 +1,12 @@
 #inputfield{
     width: 100%;
 }
+
+.input-outline{
+  border: 1px solid #050e17; /* Change the color as needed */
+  border-radius: 0.25rem;
+}
+
 .stud-div{
     background-color: rgb(146, 171, 198);
   }
